--- a/projects.html
+++ b/projects.html
@@ -52,8 +52,8 @@
 	            <div class="olivia-responsive-menu">
 	                <div class="logo">
 	                    <a href="index-2.html">
-	                        <img src="assets/img/logo.png" class="white-logo" alt="logo">
-	                        <img src="assets/img/logo-black.png" class="black-logo" alt="logo">
+	                        <!-- <img src="assets/img/logo.png" class="white-logo" alt="logo"> -->
+	                        <!-- <img src="assets/img/logo-black.png" class="black-logo" alt="logo"> -->
 	                    </a>
 	                </div>
 	            </div>
