make changes to all my work

--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!doctype html>
 <html lang="zxx">
-
-
-<!-- Mirrored from cutesolution.com/html/olivia/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 16 Aug 2024 23:49:11 GMT -->
 <head>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
@@ -52,7 +49,7 @@
 	            <div class="olivia-responsive-menu">
 	                <div class="logo">
 	                    <a href="index-2.html">
-	                        <!-- <img src="assets/img/logo.png" class="white-logo" alt="logo"> -->
+	                        <!-- <img src="assets/img/portfolio/logodan.png" class="white-logo" alt="logo"> -->
 	                        <!-- <img src="assets/img/logo-black.png" class="black-logo" alt="logo"> -->
 	                    </a>
 	                </div>
@@ -62,14 +59,14 @@
 	    <div class="olivia-nav index-navber">
 	        <div class="container">
 	            <nav class="navbar navbar-expand-md navbar-light">
-	                <a class="navbar-brand" href="index-2.html">
+	                <a class="navbar-brand" href="index.html">
 	                    <!-- <img src="assets/img/dan02ogo.png" class="white-logo" alt="logo"> -->
 	                    <!-- <img src="assets/img/logo-black.png" class="black-logo" alt="logo"> -->
 	                </a>
 	                <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
 	                    <ul class="navbar-nav">
 	                        <li class="nav-item">
-	                            <a href="index-2.html" class="nav-link">Home</a>
+	                            <a href="index.html" class="nav-link">Home</a>
 	                        </li>
 	                        <li class="nav-item">
 	                            <a href="about.html" class="nav-link">About Us</a>
@@ -160,7 +157,7 @@
 								</div>
 							</div>
 							<div class="about-btn-box"> 
-								<a class="default-btn" href="#0">Hire Me<span></span></a>
+								<a class="default-btn" href="certification.html">CERTIFICATION<span></span></a>
 							</div>
 						</div>
 					</div>
