--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
 	            <div class="olivia-responsive-menu">
 	                <div class="logo">
 	                    <a href="index-2.html">
-	                        <!-- <img src="assets/img/logo.png" class="white-logo" alt="logo"> -->
+	                        <!-- <img src="assets/img/logomak.png" class="white-logo" alt="logo"> -->
 	                        <!-- <img src="assets/img/logo-black.png" class="black-logo" alt="logo"> -->
 	                    </a>
 	                </div>
@@ -63,14 +63,14 @@
 	    <div class="olivia-nav">
 	        <div class="container">
 	            <nav class="navbar navbar-expand-md navbar-light">
-	                <a class="navbar-brand" href="index-2.html">
+	                <a class="navbar-brand" href="index.html">
 	                    <!-- <img src="assets/img/logo.png" class="white-logo" alt="logo"> -->
 	                    <!-- <img src="assets/img/logo-black.png" class="black-logo" alt="logo"> -->
 	                </a>
 	                <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
 	                    <ul class="navbar-nav">
 	                        <li class="nav-item">
-	                            <a href="index-2.html" class="nav-link">Home</a>
+	                            <a href="index.html" class="nav-link">Home</a>
 	                        </li>
 	                        <li class="nav-item">
 	                            <a href="about.html" class="nav-link"> About Us </a>
@@ -114,7 +114,7 @@
 					<div class="page-title-content">
 						<h2>About Us</h2>
 						<ul>
-							<li><a href="index-2.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li>About Us</li>
 						</ul>
 					</div>
@@ -156,7 +156,7 @@
 								</div>
 							</div>
 							<div class="about-btn-box"> 
-								<a class="default-btn" href="#0">Hire Me<span></span></a>
+								<a class="default-btn" href="certification.html">CERTIFICATION<span></span></a>
 							</div>
 						</div>
 					</div>
