add new features

--- a/certification.html
+++ b/certification.html
@@ -133,10 +133,16 @@
     </div>
     <br>
     <section>
+        
         <div class="image-container">
-            <img src="assets/img/Coursera DMARK PYTHON.jpg" alt="About image">
-            <br>
-            <img src="assets/img/Coursera DMARK DJANGO.jpg" alt="About image">
+            <div class="img-fluid">
+                <img src="assets/img/Coursera DMARK PYTHON.jpg" alt="About image">
+            </div>
+             <br>
+             <div class="img-fluid">
+                <img src="assets/img/Coursera DMARK DJANGO.jpg" alt="About image">
+             </div>
+            
         </div>
 
     </section>
